update redis cat

--- a/config-files/ssdb.conf
+++ b/config-files/ssdb.conf
@@ -2,8 +2,8 @@
 # MUST indent by TAB!
 
 # relative to path of this file, directory must exists
-work_dir = ./
-pidfile = ./log/ssdb.pid
+work_dir = ~/
+pidfile = ~/log/ssdb.pid
 
 server:
 	ip: 0.0.0.0
