update redis cat

--- a/config-files/redis.conf
+++ b/config-files/redis.conf
@@ -15,7 +15,7 @@ tcp-backlog 65535
 rdbcompression yes
 rdbchecksum yes
 dbfilename dump.rdb
-dir ~/
+dir ~/redis/
 slave-serve-stale-data yes
 slave-read-only yes
 slave-priority 100
