--- a/config-files/ssdb.conf
+++ b/config-files/ssdb.conf
@@ -2,7 +2,7 @@
 # MUST indent by TAB!
 
 # relative to path of this file, directory must exists
-work_dir = ~/
+work_dir = ~/ssdb/
 pidfile = ~/log/ssdb.pid
 
 server:
