update redis config

--- a/config-files/redis-6379.conf
+++ b/config-files/redis-6379.conf
@@ -1,4 +1,3 @@
-
 daemonize yes
 
 #pidfile /var/run/redis.pid
@@ -15,7 +14,7 @@ tcp-backlog 65535
 rdbcompression yes
 rdbchecksum yes
 dbfilename dump.rdb
-dir ~/redis/
+dir ./ # 此处需要制定路径以后要mkdir 该路径！！切记
 slave-serve-stale-data yes
 slave-read-only yes
 slave-priority 100
