dell mapGods function

--- a/config-files/redis-6379.conf
+++ b/config-files/redis-6379.conf
@@ -14,7 +14,8 @@ tcp-backlog 65535
 rdbcompression yes
 rdbchecksum yes
 dbfilename dump.rdb
-dir ./ # 此处需要制定路径以后要mkdir 该路径！！切记
+dir ./
+# 此处需要制定路径以后要mkdir 该路径！！切记
 slave-serve-stale-data yes
 slave-read-only yes
 slave-priority 100
